--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<title>MonoManager</title>
-	<link rel="stylesheet" type="text/css" href="universal-wip.css"> 
-	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<link rel="stylesheet" type="text/css" href="css/universal-wip.css"> 
+	<link rel="stylesheet" type="text/css" href="css/main.css"> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
@@ -31,6 +31,6 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="src/main.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
