--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
     <main id="content" role="main">
       <div class="container">
-        <div class="players">
-
-        </div>
+        <div class="errors"></div>
+        <div class="players"></div>
 
         <div id="modal-add-player" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
@@ -79,6 +78,6 @@
       </div>
     </main>
 
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/manager.js"></script>
   </body>
 </html>
