Add history view

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <div class="container">
         <div class="errors"></div>
         <div class="players"></div>
+        <div class="history">
+          <h4>History <small>(5 latest entries)</small></h4>'
+        </div>
 
         <div id="modal-add-player" class="modal fade" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
@@ -83,7 +86,6 @@
 
       </div>
     </main>
-
     <script type="text/javascript" src="js/manager.js"></script>
   </body>
 </html>
