Remove uwanted extra character

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="errors"></div>
         <div class="players"></div>
         <div class="history">
-          <h4>History <small>(5 latest entries)</small></h4>'
+          <h4>History <small>(5 latest entries)</small></h4>
         </div>
 
         <div id="modal-add-player" class="modal fade" tabindex="-1" role="dialog">
